src/objects/Requirement__c.object
<CustomObject>
    <description>Captures business requirements as discovered and defined during the project.</description>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enabling_Technology__c</fullName>
        <label>Enabling Technology</label>
        <picklist>
            <picklistValues>
                <fullName>SFDC Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SFDC Apex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch Process/ETL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Intelligence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CTI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Data Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scontrol</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fit_Percentage__c</fullName>
        <label>Fit Percentage</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Functional_Requirement__c</fullName>
        <description>Description of business requirement</description>
        <inlineHelpText>Description of business requirement</inlineHelpText>
        <label>Functional Requirement</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gap_Detail__c</fullName>
        <label>Gap Detail</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gap__c</fullName>
        <label>Gap</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>High_Level_Requirement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>High Level Requirement</label>
        <referenceTo>High_Level_Requirement__c</referenceTo>
        <relationshipName>R00N80000002bEVbEAM</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lines_of_Business_Requestor__c</fullName>
        <label>Lines of Business Requestor</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executives</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <picklist>
            <picklistValues>
                <fullName>Accounts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home Page</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Object</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Process_Id__c</fullName>
        <label>Process Id</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Objective__c</fullName>
        <description>What project objective will this requirement help meet?  These could be the Business Value drivers defined during the BVA and/or business objectives captured during the pre-sales cycle.  Sample BVA business objectives have been included.</description>
        <label>Project Objective</label>
        <picklist>
            <picklistValues>
                <fullName>Improve New Customer Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase Sales to Existing Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase Retention of Existing Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improve Sales Effectiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avoid Strategic Project Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduce Business Operation Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove Risk of Legacy Platform Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduce Risk from Regulatory Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improve Customer Interactions &amp; Insight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improve User Interaction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Approach__c</fullName>
        <label>Proposed Approach</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Req_Workshop_Answers__c</fullName>
        <label>Req. Workshop Answers</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Req_Workshop_Questions__c</fullName>
        <label>Req. Workshop Questions</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reviewed_with_Business__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Signed off by business.</description>
        <label>Reviewed with Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewed_with_Tech_Team__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Requirement has been signed off by the technical team.</description>
        <label>Reviewed with Tech Team</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scope__c</fullName>
        <label>Scope</label>
        <picklist>
            <picklistValues>
                <fullName>Out-of-Scope (deferred)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Scope (As-Is)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Scope (Manual)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In-Scope (Automated)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution_Complexity__c</fullName>
        <label>Solution Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Solution_Type__c</fullName>
        <label>Solution Type</label>
        <picklist>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Assignement Rules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approval Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Validation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>API Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VisualForce Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Code Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outbound Message</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open Issue Remains</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lockdown</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Technical_Considerations__c</fullName>
        <label>Technical Considerations</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Entity Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow / Business Process Flow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting / Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security (Profile/Roles/Layouts)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory/Legal/Regional/ Globalization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need More Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Case__c</fullName>
        <description>Narrative in business terms of how the requirement may be applied.  This information could be later used for test scripts and training materials.</description>
        <inlineHelpText>Narrative in business terms of how the requirement may be applied.  This information could be later used for test scripts and training materials.</inlineHelpText>
        <label>Use Case</label>
        <type>TextArea</type>
    </fields>
    <label>Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Functional_Requirement__c</columns>
        <columns>Scope__c</columns>
        <columns>Status__c</columns>
        <columns>Priority__c</columns>
        <columns>Type__c</columns>
        <columns>High_Level_Requirement__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>